<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.presentation.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_beer_logo"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/TextView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee_shade"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/font_xxxxlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="@dimen/spacing_empty"
            android:layout_height="@dimen/spacing_empty"
            android:background="@drawable/round_primary_color_background_top"
            android:elevation="@dimen/spacing_large"
            android:padding="@dimen/spacing_huge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline"
            app:layout_constraintVertical_bias="1.0">

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="@dimen/spacing_empty"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:background="@drawable/round_white_smoke_background"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                app:layout_constraintBottom_toTopOf="@+id/editText_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="@dimen/spacing_empty"
                android:layout_height="wrap_content"
                android:background="@drawable/round_white_smoke_background"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.015"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35000002" />

            <TextView
                android:id="@+id/textView_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_standard"
                android:text="@string/forget_password"
                android:textColor="@color/black"
                android:textSize="@dimen/font_medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/editText_password"
                app:layout_constraintTop_toBottomOf="@+id/editText_password" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="@dimen/spacing_empty"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_huge"
                android:background="@drawable/round_black_background"
                android:elevation="@dimen/spacing_large"
                android:text="@string/action_sign_in_short"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_forget_password" />

            <TextView
                android:id="@+id/textView_dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textColor="@color/white"
                android:textSize="@dimen/font_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard"
                android:text="@string/action_sign_up"
                android:textColor="@color/black"
                android:textSize="@dimen/font_medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView_dont_have_account"
                app:layout_constraintStart_toEndOf="@+id/textView_dont_have_account"
                app:layout_constraintTop_toTopOf="@+id/textView_dont_have_account" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:background="@color/black_transparency">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_loading"
            android:layout_width="@dimen/spacing_big_xxlarge"
            android:layout_height="@dimen/spacing_big_xxlarge"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45"
            app:lottie_fileName="beer_loading.json"
            app:lottie_loop="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>